--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node app.js",   
-  "dev": "nodemon app.js",
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "node scripts/fix-pdf-parse.js"
   },
@@ -17,11 +17,12 @@
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
+    "connect-mysql2": "^2.2.6",
     "connect-session-sequelize": "^7.1.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "express-session": "^1.18.1",
+    "express-session": "^1.18.2",
     "firebase": "^11.9.0",
     "firebase-admin": "^13.4.0",
     "fs": "^0.0.1-security",
